# invenio-group-collections-kcworks

./: .gitignore  .gitmodules  CHANGES.md  INSTALL.rst  LICENSE  MANIFEST.in  Pipfile  README.md  authors.rst  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: tests.yml
invenio_group_collections/: __init__.py  cli.py  config.py  ext.py  proxies.py  service.py  service_config.py  utils.py  views.py
invenio_group_collections_kcworks/: __init__.py  cli.py  config.py  errors.py  ext.py  proxies.py  service.py  service_config.py  utils.py  views.py
invenio_group_collections_kcworks/dependencies/invenio-remote-user-data-kcworks/invenio_remote_user_data_kcworks/: service.py
invenio_group_collections_kcworks/dependencies/invenio-remote-user-data-kcworks/tests/: test_service.py
invenio_groups/: __init__.py  api.py  cli.py  components.py  config.py  dumpers.py  errors.py  ext.py  models.py  proxies.py  schema.py  service.py  service_config.py  systemfields.py  utils.py  validators.py  views.py
invenio_groups/alembic/: 737496a37317_create_invenio_groups_table.py
invenio_groups/jsonschemas/: groups-metadata-v1.0.0.json
invenio_groups/mappings/os-v1/groups/: groups-v1.0.0.json
scripts/: use_nested_dependencies.py
tests/: conftest.py  test_alembic.py  test_invenio_group_collections.py  test_invenio_groups.py  test_models.py  test_service.py  test_views.py
