[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invenio-groups"
version = "2023.07.05"
description = "Provides social groups infrastructure for InvenioRDM"
readme = "README.md"
authors = [{ name = "MESH Research", email = "scottia4@msu.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["invenio", "inveniordm", "groups", "social", "research"]
dependencies = [
    "click>=7.0"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "check-manifest",
    "pip-tools",
    "pytest>=7.3.2",
    "pytest-runner",
]


[project.urls]
Homepage = "https://github.com/MESH-Research/invenio-groups"


[tool.pytest.ini_options]
addopts = "--doctest-glob='*.rst' --doctest-modules"
testpaths = [ "tests", "invenio_groups" ]

[project.scripts]
invenio-groups = "invenio_groups.cli:cli"

[project.entry-points."invenio_db.models"]
invenio_groups = "invenio_groups.models"

[project.entry-points."invenio_db.alembic"]
invenio_groups = "invenio_groups:alembic"

[project.entry-points."invenio_base.apps"]
invenio_groups = "invenio_groups.ext:InvenioGroups"

[project.entry-points."invenio_base.api_apps"]
invenio_groups = "invenio_groups.ext:InvenioGroups"

[project.entry-points."invenio_base.api_blueprints"]
invenio_groups = "invenio_groups.views:create_api_blueprint"
