[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "wheel"]

[project]
name = "invenio-group-collections-kcworks"
version = "0.1.0-dev1"
description = "Provides collections administered by remote social groups for the Knowledge Commons Works instance of InvenioRDM"
readme = "README.md"
keywords = ["groups", "invenio", "inveniordm", "research", "social"]
license = { file = "LICENSE" }
authors = [{ name = "MESH Research", email = "scottia4@msu.edu" }]
requires-python = ">=3.9"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "alembic",
  "click>=7",
  "docker-services-cli",
  "invenio-administration",
  "invenio-app-rdm[opensearch2]",
  "invenio-cli",
  "invenio-communities",
  "opensearch-dsl",
  "psycopg2-binary",
  "unidecode",
]
optional-dependencies.dev = [
  "check-manifest",
  "pip-tools",
  "pytest>=7.3.2",
  "pytest-invenio>=3.3,<4",
  "pytest-runner",
  "requests-mock",
]
optional-dependencies.tests = [
  "pytest>=7.3.2",
  "pytest-invenio",
  "pytest-runner",
  "requests-mock",
]
urls.Homepage = "https://github.com/MESH-Research/invenio-group-collections-kcworks"
scripts.invenio-group-collections-kcworks = "invenio_group_collections_kcworks.cli:cli"
entry-points."invenio_base.api_apps".invenio_group_collections_kcworks = "invenio_group_collections_kcworks.ext:InvenioGroupCollections"
entry-points."invenio_base.api_blueprints".invenio_group_collections_kcworks = "invenio_group_collections_kcworks.views:create_api_blueprint"
entry-points."invenio_base.apps".invenio_group_collections_kcworks = "invenio_group_collections_kcworks.ext:InvenioGroupCollections"

[tool.check-manifest]
ignore = [
  "PKG-INFO",
  ".egg-info",
  ".egg-info/*",
  "setup.cfg",
  ".DS_Store",
  ".hgtags",
  ".hgsigs",
  ".hgignore",
  ".gitignore",
  ".bzrignore",
  ".gitattributes",
  ".github/*",
  ".travis.yml",
  "Jenkinsfile",
  "* .mo",
  "dist/*",
  "build/*",
  "invenio_group_collections_kcworks/dependencies/*",
  "*.gitkeep",
]

[tool.pytest.ini_options]
addopts = "--doctest-glob='*.rst' --doctest-modules"
testpaths = ["tests", "invenio_group_collections_kcworks"]

[tool.bumpver]
current_version = "0.1.0-dev1"
version_pattern = "MAJOR.MINOR.PATCH[-TAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"README.md" = ["Version {version}"]
"VERSION" = ['^"{version}"']
"invenio_group_collections_kcworks/__init__.py" = ['^__version__ = "{version}"']

[tool.bdist_wheel]
universal = 1
