[build-system]
build-backend = "setuptools.build_meta"
requires = ["babel>2.8", "setuptools>=61", "wheel"]

[project]
name = "invenio-group-collections-kcworks"
version = "0.1.0-dev1"

description = "Provides collections administered by remote social groups for the Knowledge Commons Works instance of InvenioRDM"
readme = "README.md"
keywords = ["groups", "invenio", "inveniordm", "research", "social"]

license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "MESH Research", email = "scottia4@msu.edu" }]
requires-python = ">=3.12"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "alembic",
  "click>=7",
  "docker-services-cli",
  "invenio-administration",
  "invenio-app-rdm[opensearch2]<14",
  "invenio-cli",
  "invenio-communities",
  "opensearch-dsl",
  "psycopg2-binary",
  "standard-pkg-resources",
  "unidecode",
]
optional-dependencies.dev = [
  "check-manifest",
  "pip-tools",
  "pytest>=7.3.2",
  "pytest-invenio",
  "pytest-runner",
  "requests-mock",
]
optional-dependencies.tests = [
  "mypy>=1.8",
  "pytest-cov>=6.2.1",
  "pytest-invenio>=3.3,<4",
  "pytest-isort>=4",
  "pytest-mock",
  "pytest-mypy>=0.10",
  "pytest-ruff>=0.1",
  "requests-mock",
  "ruff>=0.3",
  "selenium",
]
urls.Homepage = "https://github.com/MESH-Research/invenio-group-collections-kcworks"
scripts.invenio-group-collections-kcworks = "invenio_group_collections_kcworks.cli:cli"
entry-points."invenio_base.api_apps".invenio_group_collections_kcworks = "invenio_group_collections_kcworks.ext:InvenioGroupCollections"
entry-points."invenio_base.api_blueprints".invenio_group_collections_kcworks = "invenio_group_collections_kcworks.views:create_api_blueprint"
entry-points."invenio_base.apps".invenio_group_collections_kcworks = "invenio_group_collections_kcworks.ext:InvenioGroupCollections"

[tool.uv.sources]
invenio-communities = { path = "../invenio-communities/", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
  "**/*.ipynb",                                                  # Exclude Jupyter notebook files
  "app_data",
  "docs",
  "node_modules",
  "scripts",
  "site/kcworks/dependencies/invenio-communities",
  "site/kcworks/dependencies/invenio-group-collections-kcworks",
  "site/kcworks/dependencies/invenio-modular-deposit-form",
  "site/kcworks/dependencies/invenio-modular-detail-page",
  "site/kcworks/dependencies/invenio-rdm-records",
  "site/kcworks/dependencies/invenio-record-importer-kcworks",
  "site/kcworks/dependencies/invenio-remote-api-provisioner",
  "site/kcworks/dependencies/invenio-remote-user-data-kcworks",
  "site/kcworks/dependencies/invenio-stats-dashboard",
  "site/kcworks/dependencies/invenio-vocabularies",
  "site/kcworks/services/search/index_templates",
  "tests/helpers",
]
# temporarily removed C for complexity checks
lint.select = ["B", "D", "DOC", "E", "F", "I", "UP"]
# Now Ruff handles formatting, so enable formatting rules
lint.ignore = [
  "D412", # Missing blank line before closing docstring
  # Keep some warnings disabled
  "W1", # Indentation warnings
  "W2", # Whitespace warnings
  "W3", # Blank line warnings
]
lint.per-file-ignores."__init__.py" = ["D104", "E402", "F401"]
lint.per-file-ignores."tests/api/test_stats.py" = ["C416"]
# Ensure consistent import sorting - explicitly declare tests as first-party
lint.isort.known-first-party = [
  "invenio_stats_dashboard",
  "invenio_record_importer_kcworks",
  "tests",
]
lint.pydocstyle.convention = "google"
lint.preview = true

[tool.isort]
profile = "black"
line_length = 88
verbose = true
multi_line_output = 3 # Vertical hanging indent
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
skip = [
  "site/kcworks/dependencies/invenio-rdm-records",
  "site/kcworks/dependencies/invenio-vocabularies",
  "site/kcworks/dependencies/invenio-communities",
  "__pycache__",                                    # Skip cache directories
  # ".venv",  # Skip virtual environment
  # "node_modules",  # Skip node modules
]

[tool.check-manifest]
ignore = [
  "PKG-INFO",
  ".egg-info",
  ".egg-info/*",
  "setup.cfg",
  ".DS_Store",
  ".hgtags",
  ".hgsigs",
  ".hgignore",
  ".gitignore",
  ".bzrignore",
  ".gitattributes",
  ".github/*",
  ".travis.yml",
  "Jenkinsfile",
  "* .mo",
  "dist/*",
  "build/*",
  "invenio_group_collections_kcworks/dependencies/*",
  "*.gitkeep",
]

[tool.pytest.ini_options]
addopts = """
--ruff --doctest-modules
--log-cli-level=DEBUG
--ignore=app_data
--ignore=docs
--ignore=node_modules
--ignore=scripts
--ignore=tests/helpers
--cov=invenio_group_collections_kcworks 
--cov-report=term-missing
"""
testpaths = ["tests", "invenio_group_collections_kcworks"]
norecursedirs = []
log_cli_level = "DEBUG"
isort_show_files = true
plugins = []

[tool.coverage.run]
omit = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
ignore_missing_imports = true
follow_imports = "skip"
allow_untyped_globals = true
exclude = ['^tests/']

[tool.babel.compile_catalog]
directory = "translations/"
use-fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "Mesh Research"
msgid_bugs_address = "scottia4@msu.edu"
mapping-file = "translations/babel.ini"
output-file = "translations/messages.pot"
add-comments = "NOTE"

[tool.babel.init_catalog]
input-file = "translations/messages.pot"
output-dir = "translations/"

[tool.babel.update_catalog]
input-file = "translations/messages.pot"
output-dir = "translations/"

[tool.bumpver]
current_version = "0.1.0-dev1"
version_pattern = "MAJOR.MINOR.PATCH[-TAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"README.md" = ["Version {version}"]
"VERSION" = ['^"{version}"']
"invenio_group_collections_kcworks/__init__.py" = ['^__version__ = "{version}"']

[tool.pylsp.plugins.jedi]
extra_paths = [
  "../../..",               # kcworks (site/)
  "../invenio-communities",
]

[tool.bdist_wheel]
universal = 1
