# -*- coding: utf-8 -*-
#
# Copyright (C) 2023 MESH Research
#
# invenio-groups is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
version = attr: invenio_groups.__version__

[options.entry_points]
console_scripts =
    invenio-groups= invenio_groups.cli:cli
invenio_base.apps =
    invenio_groups = invenio_groups.ext:InvenioGroups
invenio_base.api_apps =
    invenio_groups = invenio_groups.ext:InvenioGroups
invenio_db.models =
    invenio_groups = invenio_groups.models
invenio_db.alembic =
    invenio_groups = invenio_groups:alembic
invenio_jsonschemas.schemas =
    invenio_groups = invenio_groups.jsonschemas

[check-manifest]
ignore =
    .*-requirements.txt
    *.bin
    *.gitkeep

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --doctest-glob="*.rst" --doctest-modules
testpaths = tests invenio_groups

[pydocstyle]
add_ignore = D401