# -*- coding: utf-8 -*-
#
# Copyright (C) 2023 MESH Research
#
# invenio-group-collections is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
version = attr: invenio_group_collections.__version__

[options.entry_points]
console_scripts =
    invenio-group-collections= invenio_group_collections.cli:cli
invenio_base.apps =
    invenio_group_collections = invenio_group_collections.ext:InvenioGroupCollections
invenio_base.api_apps =
    invenio_group_collections = invenio_group_collections.ext:InvenioGroupCollections
invenio_base.api_blueprints =
    invenio_group_collections = invenio_group_collections.views:create_api_blueprint
invenio_db.models =
    invenio_group_collections = invenio_group_collections.models
invenio_db.alembic =
    invenio_group_collections = invenio_group_collections:alembic
invenio_jsonschemas.schemas =
    invenio_group_collections = invenio_group_collections.jsonschemas
invenio_search.mappings =
    invenio_group_collections = invenio_group_collections.mappings

[check-manifest]
ignore =
    .*-requirements.txt
    *.bin
    *.gitkeep

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --doctest-glob="*.rst" --doctest-modules
testpaths = tests invenio_group_collections

[pydocstyle]
add_ignore = D401